static/css/style.css
html {
    font-family: 'Open Sans', sans-serif;
    background-color: #ffd9e4;
    color: #3D3D3D;
}

html, body {
    height: 100%;
    width: 100%;
    margin: 0px; /*resets the margin and padding of the css*/
    padding: 0px;
}

header a, a:visited {
    color: #3D3D3D; /*links wont appear in a different colour*/
    text-decoration: none;
}

header {
    height: 8%; 
    min-height: 70px;
    width: 100%;
    position: fixed;
    z-index: 1; /*makes the header appear on top*/
    background-color: white;
    padding-left: 4%;
} 

main {
    margin: 0;
    padding-top: 70px;
    min-height: 794px;
    max-width: 100%;

}

footer {
    height: 8%; 
    min-height: 70px;
    max-width: 100%; /*max width makes page not sidescroll, whereas width does*/
    background-color: white;
    padding-left: 4%;
    padding-top: 1px;
    padding-bottom: 4px;
}

#splash {
    position: relative;
    height: 60%;
    font-size: 35px;
    text-align: center;
    padding-top: 12%;
    padding-bottom: 5%;
    background-color: #ffbdc6;
    background-image: linear-gradient(to bottom right, #ffb7c1, #ffd6dc);
    color: #ffffff;
}

.cake-button { /*this section and the 2 below makes the link look like a button*/
    background-color: #f4364f;
    color: white;
    padding: 14px 25px;
    font-size: 30px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    border: none;
    border-radius: 5px;
}

.cake-button:hover {
    background-color: #f01835;
    transform: scale(1.05, 1.05);
    transition-duration: 1s;
}

#updates {
    color: #737373;
    height: 80%;
    font-size: 25px;
    padding-top: 0px;
    padding-left: 35px;
    padding-bottom: 0px;
}

#content {
    padding-left: 2%;
    max-width: 100%;
}

.grid-container {
    display: grid;
    grid-template-columns: auto auto; /*grid has two columns*/
    padding: 10px;
    padding-top: 20px;
    padding-left: 1%;
    padding-right: 1%;
    grid-gap: 15px 15px; /*space between grid items*/
    font-size: 55px;
}

.grid-container img {
    object-fit: cover; /*grid images will crop instead of stretch out*/
    height: 250px;
    width: 100%;
}

.grid-container a {
    color: #ffffff;
}

.grid-container a:hover {
    opacity: 0.85;
    transition-duration: 1s;
}

#cake-name { 
    transform: translate(10%, -220%); /*positions the name over the image*/
    position: absolute;
    text-shadow: 2px 2px 9px #000000; /*text shadow to make text more readable over image*/
}

@media (max-width: 1000px) { /*is only used when screen witdth is 1000px or less*/
    .grid-container {
        grid-template-columns: auto; /*grid has one columns*/
    }
}

#cake-screen {
    min-height: 300px;
    font-size: 35px;
    text-align: center;
    padding-left: 0;
}

#cake-screen img {
    object-fit: cover;
    height: 755px; 
    width: 100%;
}

#cake-header {
    /*position: absolute;*/
    transform: translate(0, -420px);
    color: white;
    font-size: 70px;
    text-shadow: 2px 2px 9px #000000;
}

.previous {
    border-radius: 50%;
    background-color: #f1f1f1;
    color: black;
    text-decoration: none;
    padding: 16px 32px;
    margin-left: 5%;
    position: absolute;
    transform: translate(0, 350px);
    z-index: 2;
}

.previous:hover {
    background-color: #d8d8d8;
    transition-duration: 0.4s;
}

.next {
    border-radius: 50%;
    background-color: #f1f1f1;
    color: black;
    text-decoration: none;
    padding: 16px 32px;
    margin-left: 90%;
    position: absolute;
    transform: translate(0, 350px);
    display: inline-block;
    z-index: 2;
}

.next:hover {
    background-color: #d8d8d8;
    transition-duration: 1s;
}

#cake-description {
    text-align: center;
    font-size: 25px;
    padding-left: 10%;
    padding-right: 10%;
    padding-bottom: 60px;
}

#ingredient-header {
    font-size: 40px;
    text-align: center;
}

#ingredient-list {
    display: grid;
    grid-template-columns: auto auto; /*grid has two columns*/
    grid-gap: 20px 20px;
    font-size: 25px;
    padding: 40px;
    padding-left: 20%;
    padding-right: 20%;
}

.banner-image img{
    object-fit: cover;
    height: 150px;
    width: 98%;
    padding-top: 1.5%;
}

.half-image img {
    object-fit: cover;
    height: 800px;
    width: 50%;
    padding-top: 2%;
    padding-bottom: 2%;
    padding-right: 2%;
    float: left;
}

.span-image img{
    object-fit: cover;
    height: 500px;
    width: 98%;
    padding-top: 2%;
    padding-bottom: 2%;
}

.head-title {
    transform: translate(0, -130px);
    text-align: center;
    position: absolute;
    left: 0; /*setting left, right to zero & margins to auto, centers the element*/
    right: 0;
    margin-left:auto;
    margin-right:auto;
    color: white;
    font-size: 70px;
    text-shadow: 2px 2px 9px #000000;
}

.about-text {
    padding-top: 2%;
    padding-right: 2%;
    font-size: 30px;
}

.post-button { /*this section and the 2 below makes the link look like a button*/
    background-color: #f4364f;
    color: white;
    font-size: 25px;
    text-decoration: none;
    display: inline-block;
    border: none;
    border-radius: 5px;
    margin-top: 1%;
    padding-left: 1%;
    padding-right: 1%;
    opacity: 70%;
}

.post-button:hover {
    opacity: 1;
    transition: 0.5s;
}

input {
    font-family: 'Open Sans', sans-serif;
    width: 50%;
    box-sizing: border-box;
    border: 2px solid #ccc;
    border-radius: 4px;
    font-size: 16px;
    background-color: white;
    background-position: 10px 10px; 
    background-repeat: no-repeat;
    padding: 12px 20px 12px 40px;
}

textarea {
    font-family: 'Open Sans', sans-serif;
    width: 50%;
    box-sizing: border-box;
    border: 2px solid #ccc;
    border-radius: 4px;
    font-size: 16px;
    background-color: white;
    background-position: 10px 10px; 
    background-repeat: no-repeat;
    padding: 12px 20px 12px 40px;
}

.board-header {
    font-size: 25px;
    font-weight: 500;
    text-decoration: none;
}

button { /*this section and the 2 below makes the link look like a button*/
    background-color: #f4364f;
    color: white;
    font-size: 25px;
    text-decoration: none;
    display: inline-block;
    border: none;
    border-radius: 5px;
    margin-top: 1%;
    padding-left: 1%;
    padding-right: 1%;
    opacity: 70%;
}

button:hover {
    opacity: 1;
    transition: 0.5s;
}

/*.post-wrapper {
}*/

